--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="shortcut icon" href="imagens/WH.png" type="image/x-icon">
   <title>Work Home</title>
 
 </head>
-<body class="vid">
+<body>
   <div  class="efx">
     <h1>Work Home</h1>
   </div>
@@ -17,29 +18,28 @@
   <p class="item2">Choose your working hours.</p>
   <p class="item3">Work with someone you've been with for centuries.</p>
 <!-- ==================================================== -->
-  <div>
-    <img class="img" src="imagens/wallpape.jpg">
-  </div>
+
  
 
  <div class="form">
     <form method="post" action="dados.php">
       <h2>Log in</h2>
-       <br><label></label><br>
-         <br><input type="text" name="name" placeholder="Username..." required><br>
+         <br><input class="m-2" type="text" name="name" placeholder="Username..." required><br>
+         <input class="m-2" type="text" name="email" placeholder="Email..." required><br>
        <!-- <br><label></label><br> -->
-         <br><br><input type="text" name="email" placeholder="Email..." required><br>
-        <br><button type="submit">Send</button>
-        <button type="reset">Clean</button><br>
+      <div>
+        <button class="btn btn-primary m-1" type="submit">Send</button>
+        <button class="btn btn-primary m-1" type="reset">Clean</button><br>
+      </div>
     </form><br>
-    <div class="social">
+    <div class="d-flex justify-content-evenly">
       <img src="imagens/gmail.png">
       <img src="imagens/linkedin.png">
       <img src="imagens/github.png"> 
       </div>
         <div class="link">
-         <a href="">| Register |</a>
-         <a href="">| Forgot password? |</a>
+         <a class="nav-link" href="">Register</a>
+         <a class="nav-link"  href="">Forgot password?</a>
         </div>
  </div>
 
